# PrefectScraperAI

./: .dockerignore  .env-template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: minio.py  postgres.py
src/helpers/: utils.py
src/models/: pydantic_models.py  sqlalchemy_models.py
src/pipeline/: main.py  prefect_pipeline.py
src/tasks/: generate_embedding.py  load_to_postgres.py  scrape_pisos.py  scrape_solvia.py  upload_report.py
